Sr Projects Class group discussion, too much to list here, use diff :P
git-svn-id: svn://dunari.cis.vtc.edu/POWER@154 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/Satellite-Hardware.tex
+++ b/Documents/Design/Hardware/Satellite-Hardware.tex
@@ -8,7 +8,7 @@ we will be using the Xbee Series 2 Radio Modules.
 \subsubsection{XBee Series 2 Radio Modules}
 
 The XBee Series 2 Radio Module is configured to be running
-the Zigbee mesh firmware. We chose this module because of it's
+the ZigBee mesh firmware. We chose this module because of it's
 low current draw. When configured as an end device, it draws at
 most 40 mA. In addition to it's low power draw, it also has a 
 considerable indoor transmit range of 133 ft.
