--- a/Documents/Design/Hardware/Server-Hardware.tex
+++ b/Documents/Design/Hardware/Server-Hardware.tex
@@ -14,7 +14,7 @@ It's a small form-factor, low-power machine with the following specs:
 	\item Various connection interfaces:
 	\begin{itemize}
 		\item 2x SATA ports
-		\item Header for Solid State Drive (SSD) power
+		\item Header for SATA power
 		\item Ethernet port
 		\item 5x USB 2.0 ports
 		\item General Purpose Input/Output (GPIO) pin header
@@ -22,8 +22,7 @@ It's a small form-factor, low-power machine with the following specs:
 \end{itemize}
 
 \subsubsection{Potential Problems}
-If for whatever reason using this mainboard falls through: 
-It should be noted that the requirements for the Server hardware concern not just specifications, but interfaces as well.
+If for whatever reason using this mainboard falls through, it should be noted that the requirements for the Server hardware concern not just specifications, but interfaces as well.
 In particular, this project requires at least Ethernet, 2 USB ports, a SATA port, and accessible GPIO pins.
 \subsubsection{Storage}
 The Server's mainboard is connected via SATA to a 40GB SSD.
