--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -35,7 +35,7 @@
 \begin{document}
 
 % Title and authors
-\title{P.O.W.-R. High Level Design Document}
+\title{POW-R High Level Architecture Document}
 \author{
   Grace De Geus\\
   \texttt{gdegeus@vtc.edu}
