--- a/Documents/Design/Software/Backend-Satellite.tex
+++ b/Documents/Design/Software/Backend-Satellite.tex
@@ -26,7 +26,7 @@ returning the requested data or a confirmation of modification to the front end 
 
 \subsubsection{Sub-modules}
 Communication with the Satellites:\\
-This modules serves as an interface and a form listnener. 
+This modules serves as an interface and a form listener. 
 It will receive POSTed commands for dispatch to the ZigBee network via a serial-port connected ZigBee. 
 It will also receive the incoming data from the ZigBee network and store it in the Database. 
 The data will consist of the current and voltage readings from each Satellite on the network. 
